<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".fragments.SelectCityModeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_city"
        android:textColor="@color/text_color"
        android:textSize="32sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:id="@+id/buttonMyCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_city" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonInputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to_input_city" />

    </LinearLayout>
</LinearLayout>