<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activities.WeatherActivity">
    <androidx.appcompat.widget.Toolbar
        android:background="@color/backgroundToolbar"
        app:titleTextColor="@color/text_color"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/weather" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/transparent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardview_background"/>

            <LinearLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@color/black" />

                <TextView
                    android:id="@+id/textViewCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/text_color"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/transparent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardview_background"/>

            <LinearLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textViewWindDirection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="360"
                        android:textColor="@color/text_color"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewWindSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="5"
                        android:textColor="@color/text_color"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/transparent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardview_background"/>

            <LinearLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atmospheric_pressure"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewAtmosphericPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="775"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/transparent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardview_background"/>

            <LinearLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Минимальная и максимальная температура"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textViewTemperatureMinimum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Tmin"
                        android:textColor="@color/text_color"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewTemperatureMaximum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Tmax"
                        android:textColor="@color/text_color"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/transparent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardview_background"/>

            <LinearLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Влажность"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="55"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>